Fixes deprecated usage of newInstance() method.